@@ -1,3 +1,8 @@
+2010-01-07  Ian Lance Taylor  <iant@google.com>
+
+	* options.h (class General_options): Add -z text and -z textoff.
+	* layout.cc (Layout::finish_dynamic_section): Implement -z text.
+
 2010-01-06  Sriraman Tallam  <tmsriram@google.com>
 
 	* gc.h (Garbage_collection::Cident_section_map): New typedef.
